view full profile

--- a/src/views/chat.hbs
+++ b/src/views/chat.hbs
@@ -139,17 +139,17 @@ overflow-y: auto;
             {{/ifeq}}
             {{#ifeq curr_user.type "investor"}}
             <li class="nav-item">
-              <a class="nav-link" href="/users/viewfarmers">View Farmer's Profiles</a>
+              <a class="nav-link" href="/users/viewfarmers">View Farmers' Profiles</a>
             </li>
             {{/ifeq}}
             {{#ifeq curr_user.type "institution"}}
             <li class="nav-item">
-              <a class="nav-link" href="/users/viewfarmers">View Farmer's Profiles</a>
+              <a class="nav-link" href="/users/viewfarmers">View Farmers' Profiles</a>
             </li>
             {{/ifeq}}
             {{#ifeq curr_user.type "buyer"}}
             <li class="nav-item">
-              <a class="nav-link" href="/users/viewfarmers">View Farmer's Profiles</a>
+              <a class="nav-link" href="/users/viewfarmers">View Farmers' Profiles</a>
             </li>
             {{/ifeq}}
             <li class="nav-item">
@@ -175,17 +175,17 @@ overflow-y: auto;
         </li>
         {{#ifeq curr_user.type "buyer"}}
         <li>
-          <a class="page-scroll" href="/users/viewfarmers">View Farmer's Profiles</a>
+          <a class="page-scroll" href="/users/viewfarmers">View Farmers' Profiles</a>
         </li>
         {{/ifeq}}
         {{#ifeq curr_user.type "investor"}}
         <li>
-          <a class="page-scroll" href="/users/viewfarmers">View Farmer's Profiles</a>
+          <a class="page-scroll" href="/users/viewfarmers">View Farmers' Profiles</a>
         </li>
         {{/ifeq}}
         {{#ifeq curr_user.type "institution"}}
         <li>
-          <a class="page-scroll" href="/users/viewfarmers">View Farmer's Profiles</a>
+          <a class="page-scroll" href="/users/viewfarmers">View Farmers' Profiles</a>
         </li>
         {{/ifeq}}
         <li>
