--- a/src/views/investor_dashboard.hbs
+++ b/src/views/investor_dashboard.hbs
@@ -54,7 +54,7 @@
                 <a class="nav-link" href="dashboard">Dashboard</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="viewfarmers">View Farmer's Profiles</a>
+                <a class="nav-link" href="viewfarmers">View Farmers' Profiles</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="updateprofile">Update Profile</a>
@@ -73,7 +73,7 @@
             <a class="page-scroll" href="dashboard">Dashboard</a>
           </li>
           <li>
-            <a class="page-scroll" href="viewfarmers">View Farmer's Profiles</a>
+            <a class="page-scroll" href="viewfarmers">View Farmers' Profiles</a>
           </li>
           <li>
             <a class="page-scroll" href="updateprofile">Update Profile</a>
