--- a/src/views/chat_app_buyer.hbs
+++ b/src/views/chat_app_buyer.hbs
@@ -97,7 +97,7 @@
                 <a class="nav-link" href="/users/dashboard">Dashboard</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/users/viewfarmers">View Farmer's Profiles</a>
+                <a class="nav-link" href="/users/viewfarmers">View Farmers' Profiles</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/users/updateprofile">Update Profile</a>
@@ -120,7 +120,7 @@
             <a class="page-scroll" href="/users/dashboard">Dashboard</a>
           </li>
           <li>
-            <a class="page-scroll" href="/users/viewfarmers">View Farmer's Profiles</a>
+            <a class="page-scroll" href="/users/viewfarmers">View Farmers' Profiles</a>
           </li>
           <li>
             <a class="page-scroll" href="/users/updateprofile">Update Profile</a>
