--- a/src/views/success.hbs
+++ b/src/views/success.hbs
@@ -37,9 +37,16 @@
                     <p style="font-size: 20px; color: #016168">Your profile has been registered successfully!</p>
                     <br>
                     <p style="font-size: 20px; color: #016168">
-                    You will receive an email shortly mentioning the status of your profile(approved/ dissaproved). 
+                    You will receive an email shortly mentioning the status of your profile(approved/ disapproved). 
                     You can login to the website any time after your profile has been verified and approved.</p>
                 </div>
+                <a
+                            href="/users/login"
+                            class="btn btn-common btn-nv-sty"
+                            style="width: 100%; "
+                          >
+                            Home
+                          </a>
               </div>
               <div class="col-6"></div>
             </div>
