--- a/src/views/addcrops.hbs
+++ b/src/views/addcrops.hbs
@@ -22,6 +22,14 @@
   
   <div class="cover">
   <img src="/img/crops.gif" id="mygif" alt="...">
+  <div class="container" style="margin-bottom: 30px; opacity: 90%;">
+          <div style="color: red; position:absolute">
+  <h3>{{messageFailure}}</h3>
+</div>
+
+<div style="color: green; position:absolute">
+  {{messageSuccess}}
+</div>
   <header id="header-wrap">
       <!-- Navbar Start -->
       <nav
