--- a/src/views/buyer_dashboard.hbs
+++ b/src/views/buyer_dashboard.hbs
@@ -22,7 +22,8 @@
   
   <div class="cover">
   <img src="/img/crops.gif" id="mygif" alt="...">
-
+  <div class="container" style="margin-bottom: 30px; opacity: 90%;">
+          
   <header id="header-wrap">
       <!-- Navbar Start -->
       <nav
@@ -94,6 +95,13 @@
         </ul>
       </nav>
     </header>
+    <div style="color: red; position:absolute">
+  <h3>{{messageFailure}}</h3>
+</div>
+
+<div style="color: green; position:absolute">
+  {{messageSuccess}}
+</div>
     <br><br><br><br>
     <div style="text-align: right; position: sticky; padding-right: 50px">
       <span style="background-color: #fff; font-size: 20px; color:#016168; padding: 10px; opacity: 80%;">Welcome {{user.username}}</span>
