--- a/src/views/buyer_orders.hbs
+++ b/src/views/buyer_orders.hbs
@@ -126,6 +126,14 @@
         </ul>
       </nav>
     </header>
+    <div class="container" style="margin-bottom: 30px; opacity: 90%;">
+          <div style="color: red; position:absolute">
+  <h3>{{messageFailure}}</h3>
+</div>
+
+<div style="color: green; position:absolute">
+  {{messageSuccess}}
+</div>
     <br><br><br><br>
     <div style="text-align: right; position: sticky; padding-right: 50px">
       <span style="background-color: #fff; font-size: 20px; color:#016168; padding: 10px; opacity: 80%;">Hello {{user.username}}</span>
