--- a/src/views/buyer_profile.hbs
+++ b/src/views/buyer_profile.hbs
@@ -92,7 +92,13 @@
     </header>
 <br><br>
 
+<div style="color: red; position:absolute">
+  <h3>{{messageFailure}}</h3>
+</div>
 
+<div style="color: green; position:absolute">
+  {{messageSuccess}}
+</div>
   <div class="content">
     <br><br>
       <div style="text-align: right; position: sticky; padding-right: 50px">
