--- a/src/views/farmer_profile.hbs
+++ b/src/views/farmer_profile.hbs
@@ -87,6 +87,13 @@
         </ul>
       </nav>
     </header>
+    <div style="color: red; position:absolute">
+  <h3>{{messageFailure}}</h3>
+</div>
+
+<div style="color: green; position:absolute">
+  {{messageSuccess}}
+</div>
     <br><br><br><br>
   <div class="content">
     <div style="text-align: right; position: sticky; padding-right: 50px">
