error msgs upto registration

--- a/src/views/notifications.hbs
+++ b/src/views/notifications.hbs
@@ -85,6 +85,13 @@
         </ul>
       </nav>
     </header>
+    <div style="color: red; position:absolute">
+  <h3>{{messageFailure}}</h3>
+</div>
+
+<div style="color: green; position:absolute">
+  {{messageSuccess}}
+</div>
     <br><br><br><br>
     <div style="text-align: right; position: sticky; padding-right: 50px">
       <span style="background-color: #fff; font-size: 20px; color:#016168; padding: 10px; opacity: 80%;">Hello {{user.username}}</span>
