--- a/src/views/admin_dashboard.hbs
+++ b/src/views/admin_dashboard.hbs
@@ -70,6 +70,13 @@
         </ul>
       </nav>
     </header>
+    <div style="color: red; position:absolute">
+  <h3>{{messageFailure}}</h3>
+</div>
+
+<div style="color: green; position:absolute">
+  {{messageSuccess}}
+</div>
     <div class="content">
         <br><br><br><br>
         <div style="text-align: right; position: sticky; padding-right: 50px">
