--- a/src/views/register.hbs
+++ b/src/views/register.hbs
@@ -21,10 +21,19 @@
   
     
   
+        
   <div class="cover">
   <img src="/img/crops.gif" id="mygif" alt="...">
   <div class="content">
+      <div style="color: red; position:absolute">
+  <h3>{{messageFailure}}</h3>
+</div>
+
+<div style="color: green; position:absolute">
+  {{messageSuccess}}
+</div>
     <br><br>
+    
     <section id="form-dom" class="services">
       <div class="container" style="margin-bottom: 30px; opacity:90%">
         <div class="row">
