--- a/src/views/registerinstitution.hbs
+++ b/src/views/registerinstitution.hbs
@@ -24,6 +24,13 @@
   <div class="cover">
   <img src="/img/crops.gif" id="mygif" alt="...">
   <div class="content">
+    <div style="color: red; position:absolute">
+  <h3>{{messageFailure}}</h3>
+</div>
+
+<div style="color: green; position:absolute">
+  {{messageSuccess}}
+</div>
     <br><br>
     <section id="form-dom" class="services">
       <div class="container" style="margin-bottom: 30px; opacity:90%">
@@ -53,6 +60,7 @@
                           class="form-control"
                           placeholder="Full Name"
                           name="registername"
+                          required
                         />
                       </div>
                     </div>
@@ -63,6 +71,7 @@
                           class="form-control"
                           placeholder="Username"
                           name="username"
+                          required
                         />
                       </div>
                     </div>
@@ -73,6 +82,7 @@
                           class="form-control"
                           placeholder="Email Id"
                           name="email"
+                          required
                         />
                       </div>
                     </div>
@@ -83,6 +93,7 @@
                           class="form-control"
                           placeholder="Password"
                           name="password"
+                          required
                         />
                       </div>
                     </div>
@@ -93,6 +104,7 @@
                           class="form-control"
                           placeholder="Confirm Password"
                           name="password2"
+                          required
                         />
                       </div>
                     </div>
@@ -107,6 +119,7 @@
                           class="form-control"
                           placeholder="Starting amount(in INR)"
                           name="startingrange"
+                          required
                         />
                       </div>
                     </div>
@@ -117,6 +130,7 @@
                           class="form-control"
                           placeholder="Ending amount(in INR)"
                           name="endingrange"
+                          required
                         />
                       </div>
                     </div>
@@ -129,6 +143,7 @@
                           placeholder="Pancard"
                           name="businessproof"
                           id="businessproof"
+                          required
                         />
                       </div>
                     </div>
