--- a/src/views/farmer_profile.hbs
+++ b/src/views/farmer_profile.hbs
@@ -130,6 +130,7 @@
                           placeholder="Full Name"
                           name="registername"
                           value="{{farmer.fullname}}"
+                          required
                         />
                       </div>
                     </div>
@@ -142,6 +143,7 @@
                           class="form-control"
                           placeholder="Email Id"
                           name="email" value="{{user.email}}"
+                          required
                         />
                       </div>
                     </div>
@@ -179,6 +181,7 @@
                           class="form-control"
                           placeholder="Area of land(in acres)"
                           name="landarea" value="{{farmer.land_area}}"
+                          required
                         />
                       </div>
                     </div>
