--- a/src/views/institution_profile.hbs
+++ b/src/views/institution_profile.hbs
@@ -123,6 +123,7 @@
                           placeholder="Full Name"
                           name="registername"
                           value="{{institution.fullname}}"
+                          required
                         />
                       </div>
                     </div>
@@ -136,6 +137,7 @@
                           placeholder="Email Id"
                           name="email"
                           value="{{user.email}}"
+                          required
                         />
                       </div>
                     </div>
@@ -149,6 +151,7 @@
                           placeholder="Starting amount(in INR)"
                           name="startingrange"
                           value="{{institution.start}}"
+                          required
                         />
                       </div>
                     </div>
@@ -161,6 +164,7 @@
                           placeholder="Ending amount(in INR)"
                           name="endingrange"
                           value="{{institution.end}}"
+                          required
                         />
                       </div>
                     </div>
