--- a/src/views/investor_profile.hbs
+++ b/src/views/investor_profile.hbs
@@ -123,6 +123,7 @@
                           placeholder="Full Name"
                           name="registername"
                           value="{{investor.fullname}}"
+                          required
                         />
                       </div>
                     </div>
@@ -136,6 +137,7 @@
                           placeholder="Email Id"
                           name="email"
                           value="{{user.email}}"
+                          required
                         />
                       </div>
                     </div>
@@ -152,6 +154,7 @@
                           placeholder="Starting amount(in INR)"
                           name="startingrange"
                           value="{{investor.start}}"
+                          required
                         />
                       </div>
                     </div>
@@ -163,6 +166,7 @@
                           placeholder="Ending amount(in INR)"
                           name="endingrange"
                           value="{{investor.end}}"
+                          required
                         />
                       </div>
                     </div>
