--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -30,13 +30,7 @@
     </div>
     <br>
     <div class="container" style="margin-bottom: 30px; opacity: 90%;">
-          <div style="color: red; position:absolute">
-  <h3>{{messageFailure}}</h3>
-</div>
-
-<div style="color: green; position:absolute">
-  {{messageSuccess}}
-</div>
+          
     <!-- form -->
     <form method="POST" action="/users/login">
     
@@ -52,6 +46,12 @@
                     style="visibility: visible; -webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
                     Log In
                   </h1>
+                  <div style="color: red;">
+                    <p style="font-size: 15px; text-align: center">{{messageFailure}}</p>
+                  </div>
+                  <div style="color: green;">
+                    <p style="font-size: 15px; text-align: center">{{messageSuccess}}</p>
+                  </div>
                   <div class="design">
                     <form id="login-form">
                       <h3></h3>
