--- a/src/views/registerinstitution.hbs
+++ b/src/views/registerinstitution.hbs
@@ -24,13 +24,6 @@
   <div class="cover">
   <img src="/img/crops.gif" id="mygif" alt="...">
   <div class="content">
-    <div style="color: red; position:absolute">
-  <h3>{{messageFailure}}</h3>
-</div>
-
-<div style="color: green; position:absolute">
-  {{messageSuccess}}
-</div>
     <br><br>
     <section id="form-dom" class="services">
       <div class="container" style="margin-bottom: 30px; opacity:90%">
@@ -50,6 +43,12 @@
                 >
                   Register as a food-making institution
                 </h1>
+                <div style="color: red;">
+                  <p style="font-size: 15px; text-align: center">{{messageFailure}}</p>
+                </div>
+                <div style="color: green;">
+                  <p style="font-size: 15px; text-align: center">{{messageSuccess}}</p>
+                </div>
                 <div class="design">
                   <form id="register-form" method="POST" action="registerinstitution" enctype="multipart/form-data">
                     <h3></h3>
