--- a/src/views/layouts/layout.hbs
+++ b/src/views/layouts/layout.hbs
@@ -51,7 +51,6 @@
         <div class="sk-circle12 sk-child"></div>
       </div>
     </div>
-    
         
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
@@ -67,8 +66,29 @@
     <script type="text/javascript" src="/static/js/jquery.slicknav.js"></script>
     <script type="text/javascript" src="/static/js/nivo-lightbox.js"></script>
     <script type="text/javascript" src="/static/js/main.js"></script>
-    {{!-- <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> --}}
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+    <script>
+        function openForm() {
+            document.getElementById("myForm").style.display = "block";
+        }
+        function closeForm() {
+            document.getElementById("myForm").style.display = "none";
+        }
+    </script>
+    <script>
+        $(document).ready(function() {
+            $(".fancybox").fancybox({
+                openEffect: "none",
+                closeEffect: "none"
+            });
+            $(".zoom").hover(function() {
+                $(this).addClass('transition');
+            }, function() {
+                $(this).removeClass('transition');
+            });
+        });
+    </script>
 
 </body>
 </html>
