--- a/src/views/viewfarmers.hbs
+++ b/src/views/viewfarmers.hbs
@@ -161,7 +161,7 @@
                   <a href="/chat/{{this.1._id}}" class="btn btn-common btn-nv-sty" style="width: 100%; margin: 2px 0px">Chat</a>
                 </div>
                 <div class="col-lg-6 col-6">
-                  <a href="/viewfullprofile/{{this.1._id}}" class="btn btn-common btn-nv-sty" style="width: 100%; margin: 2px 0px">View full Profile</a>
+                  <a href="viewfullprofile/{{this.1._id}}" class="btn btn-common btn-nv-sty" style="width: 100%; margin: 2px 0px">View full Profile</a>
                 </div>
             </div>
           </div>
@@ -188,7 +188,7 @@
                   <a href="/chat/{{this.3._id}}" class="btn btn-common btn-nv-sty" style="width: 100%; margin: 2px 0px">Chat</a>
                 </div>
                 <div class="col-lg-6 col-6">
-                  <a href="/viewfullprofile/{{this.3._id}}" class="btn btn-common btn-nv-sty" style="width: 100%; margin: 2px 0px">View full Profile</a>
+                  <a href="viewfullprofile/{{this.3._id}}" class="btn btn-common btn-nv-sty" style="width: 100%; margin: 2px 0px">View full Profile</a>
                 </div>
             </div>
           </div>
