--- a/src/views/chat.hbs
+++ b/src/views/chat.hbs
@@ -210,6 +210,13 @@ overflow-y: auto;
       <span style="background-color: #fff; font-size: 20px; color:#016168; padding: 4px; opacity: 80%;">Hello {{curr_user.username}}</span>
     </div>
     <br>
+    <div style="color: red; position:absolute">
+  <h3>{{messageFailure}}</h3>
+</div>
+
+<div style="color: green; position:absolute">
+  {{messageSuccess}}
+</div>
   <h1 class="section-title wow fadeInUp animated" data-wow-delay="0.2s"
     style="visibility: visible; -webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s; margin-bottom: 0px">
     <span style="background-color: #fff; font-size: 40px; color:#016168; padding:15px; opacity: 90%;">Chat</span>
