--- a/src/views/notifications.hbs
+++ b/src/views/notifications.hbs
@@ -85,13 +85,7 @@
         </ul>
       </nav>
     </header>
-    <div style="color: red; position:absolute">
-  <h3>{{messageFailure}}</h3>
-</div>
-
-<div style="color: green; position:absolute">
-  {{messageSuccess}}
-</div>
+    
     <br><br><br><br>
     <div style="text-align: right; position: sticky; padding-right: 50px">
       <span style="background-color: #fff; font-size: 20px; color:#016168; padding: 10px; opacity: 80%;">Hello {{user.username}}</span>
@@ -101,6 +95,13 @@
        <span style="background-color: #fff; font-size: 40px; color:#016168; padding: 15px; opacity: 90%;">Notifications</span> 
     </h1>
     <br>
+    <div style="color: red; position:absolute">
+  <h3>{{messageFailure}}</h3>
+</div>
+
+<div style="color: green; position:absolute">
+  {{messageSuccess}}
+</div><br>
     {{#if notifications}}
     <h1 class="section-title wow fadeInUp animated" data-wow-delay="0.2s" style="visibility: visible; -webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
        <span style="background-color: #fff; font-size: 30px; color:#016168; padding: 15px; opacity: 90%; color:black">Deals</span> 
