--- a/src/views/investor_profile.hbs
+++ b/src/views/investor_profile.hbs
@@ -111,6 +111,12 @@
                 >
                   Update your profile
                 </h1>
+                <div style="color: red;">
+                  <p style="font-size: 15px; text-align: center">{{messageFailure}}</p>
+                </div>
+                <div style="color: green;">
+                  <p style="font-size: 15px; text-align: center">{{messageSuccess}}</p>
+                </div>
                 <div class="design">
                   <form id="register-form" action="updateprofile" method="POST" >
                     <h3></h3>
