--- a/src/views/notifications.hbs
+++ b/src/views/notifications.hbs
@@ -95,13 +95,12 @@
        <span style="background-color: #fff; font-size: 40px; color:#016168; padding: 15px; opacity: 90%;">Notifications</span> 
     </h1>
     <br>
-    <div style="color: red; position:absolute">
-  <h3>{{messageFailure}}</h3>
-</div>
-
-<div style="color: green; position:absolute">
-  {{messageSuccess}}
-</div><br>
+    <div style="color: red;">
+      <p style="font-size: 15px; text-align: center"> <span style="background-color: white; padding: 5px;">{{messageFailure}}</span> </p>
+    </div>
+    <div style="color: green;">
+      <p style="font-size: 15px; text-align: center"> <span style="background-color: white; padding: 5px;">{{messageSuccess}}</span> </p>
+    </div>
     {{#if notifications}}
     <h1 class="section-title wow fadeInUp animated" data-wow-delay="0.2s" style="visibility: visible; -webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
        <span style="background-color: #fff; font-size: 30px; color:#016168; padding: 15px; opacity: 90%; color:black">Deals</span> 
