--- a/src/views/verify_profile.hbs
+++ b/src/views/verify_profile.hbs
@@ -79,6 +79,12 @@
         <div style="text-align: center; position: sticky;">
         <h1> <span style="background-color: #fff; font-size: 40px; color:#016168; padding: 15px; opacity: 80%;">Profile</span> </h1>
         </div>
+        <div style="color: red;">
+          <p style="font-size: 15px; text-align: center"> <span style="background-color: white; padding: 5px;">{{messageFailure}}</span> </p>
+        </div>
+        <div style="color: green;">
+          <p style="font-size: 15px; text-align: center"> <span style="background-color: white; padding: 5px;">{{messageSuccess}}</span> </p>
+        </div>
         <br>
         <section id="form-dom">
         <div class="container" style="margin-bottom: 30px; opacity: 90%;">
