--- a/src/views/admin_dashboard.hbs
+++ b/src/views/admin_dashboard.hbs
@@ -70,13 +70,6 @@
         </ul>
       </nav>
     </header>
-    <div style="color: red; position:absolute">
-  <h3>{{messageFailure}}</h3>
-</div>
-
-<div style="color: green; position:absolute">
-  {{messageSuccess}}
-</div>
     <div class="content">
         <br><br><br><br>
         <div style="text-align: right; position: sticky; padding-right: 50px">
@@ -87,6 +80,12 @@
         <h1> <span style="background-color: #fff; font-size: 40px; color:#016168; padding: 15px; opacity: 80%;">Dashboard</span> </h1>
         </div>
         <br>
+        <div style="color: red;">
+          <p style="font-size: 15px; text-align: center"> <span style="background-color: white; padding: 5px;">{{messageFailure}}</span> </p>
+        </div>
+        <div style="color: green;">
+          <p style="font-size: 15px; text-align: center"> <span style="background-color: white; padding: 5px;">{{messageSuccess}}</span> </p>
+        </div>
         <section id="form-dom">
         <div class="container" style="margin-bottom: 30px; opacity: 90%;">
           <div class="row">
