--- a/src/views/buyer_orders.hbs
+++ b/src/views/buyer_orders.hbs
@@ -126,14 +126,6 @@
         </ul>
       </nav>
     </header>
-    <div class="container" style="margin-bottom: 30px; opacity: 90%;">
-          <div style="color: red; position:absolute">
-  <h3>{{messageFailure}}</h3>
-</div>
-
-<div style="color: green; position:absolute">
-  {{messageSuccess}}
-</div>
     <br><br><br><br>
     <div style="text-align: right; position: sticky; padding-right: 50px">
       <span style="background-color: #fff; font-size: 20px; color:#016168; padding: 10px; opacity: 80%;">Hello {{user.username}}</span>
@@ -142,6 +134,12 @@
     <h1 class="section-title wow fadeInUp animated" data-wow-delay="0.2s" style="visibility: visible; -webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
        <span style="background-color: #fff; font-size: 50px; color:#016168; padding: 15px; opacity: 90%;">Orders</span> 
     </h1>
+    <div style="color: red;">
+      <p style="font-size: 15px; text-align: center"> <span style="background-color: white; padding: 5px;">{{messageFailure}}</span> </p>
+    </div>
+    <div style="color: green;">
+      <p style="font-size: 15px; text-align: center"> <span style="background-color: white; padding: 5px;">{{messageSuccess}}</span> </p>
+    </div>
     {{#if rating}}
     {{#each rating}}
     <div class="row">
