--- a/src/views/chat.hbs
+++ b/src/views/chat.hbs
@@ -210,17 +210,16 @@ overflow-y: auto;
       <span style="background-color: #fff; font-size: 20px; color:#016168; padding: 4px; opacity: 80%;">Hello {{curr_user.username}}</span>
   </div>
     <br>
-    <div style="color: red; position:absolute">
-  <h3>{{messageFailure}}</h3>
-</div>
-
-<div style="color: green; position:absolute">
-  {{messageSuccess}}
-</div>
   <h1 class="section-title wow fadeInUp animated" data-wow-delay="0.2s"
     style="visibility: visible; -webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s; margin-bottom: 0px">
     <span style="background-color: #fff; font-size: 40px; color:#016168; padding:15px; opacity: 90%;">Chat</span>
   </h1>
+  <div style="color: red;">
+    <p style="font-size: 15px; text-align: center"> <span style="background-color: white; padding: 5px;">{{messageFailure}}</span> </p>
+  </div>
+  <div style="color: green;">
+    <p style="font-size: 15px; text-align: center"> <span style="background-color: white; padding: 5px;">{{messageSuccess}}</span> </p>
+  </div>
   <div class="container" style="position: relative; opacity: 90%">
     <div class="row">
       <div class="col-12">
