--- a/src/views/farmer_profile.hbs
+++ b/src/views/farmer_profile.hbs
@@ -87,13 +87,6 @@
         </ul>
       </nav>
     </header>
-    <div style="color: red; position:absolute">
-  <h3>{{messageFailure}}</h3>
-</div>
-
-<div style="color: green; position:absolute">
-  {{messageSuccess}}
-</div>
     <br><br><br><br>
   <div class="content">
     <div style="text-align: right; position: sticky; padding-right: 50px">
@@ -118,6 +111,12 @@
                 >
                   Update your profile
                 </h1>
+                <div style="color: red;">
+                  <p style="font-size: 15px; text-align: center">{{messageFailure}}</p>
+                </div>
+                <div style="color: green;">
+                  <p style="font-size: 15px; text-align: center">{{messageSuccess}}</p>
+                </div>
                 <div class="design">
                   <form id="register-form" action="updateprofile" method="POST" >
                     <h3></h3>
