--- a/src/views/institution_dashboard.hbs
+++ b/src/views/institution_dashboard.hbs
@@ -97,15 +97,13 @@
     <h1 class="section-title wow fadeInUp animated" data-wow-delay="0.2s" style="visibility: visible; -webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
        <span style="background-color: #fff; font-size: 50px; color:#016168; padding: 15px; opacity: 90%;">Dashboard</span> 
     </h1>
-    <div style="color: red; position:absolute">
-  <h3>{{messageFailure}}</h3>
-</div>
-
-<div style="color: green; position:absolute">
-  {{messageSuccess}}
-</div>
-    <div class="row">
-     
+    <div style="color: red;">
+      <p style="font-size: 15px; text-align: center"> <span style="background-color: white; padding: 5px;">{{messageFailure}}</span> </p>
+    </div>
+    <div style="color: green;">
+      <p style="font-size: 15px; text-align: center"> <span style="background-color: white; padding: 5px;">{{messageSuccess}}</span> </p>
+    </div>
+    <div class="row">    
       <div class="col-lg-2"></div>
       <div class="col">
         <div class="card" style="opacity: 90%; height: 130px">
