--- a/src/views/buyer_dashboard.hbs
+++ b/src/views/buyer_dashboard.hbs
@@ -104,10 +104,10 @@
        <span style="background-color: #fff; font-size: 50px; color:#016168; padding: 15px; opacity: 90%;">Dashboard</span> 
     </h1>
     <div style="color: red;">
-      <p style="font-size: 15px; text-align: center"> <span style="background-color: white; padding: 5px;">{{messageFailure}}</span> </p>
+      <p style="font-size: 15px; text-align: center"> <span style="background-color: white;">{{messageFailure}}</span> </p>
     </div>
     <div style="color: green;">
-      <p style="font-size: 15px; text-align: center"> <span style="background-color: white; padding: 5px;">{{messageSuccess}}</span> </p>
+      <p style="font-size: 15px; text-align: center"> <span style="background-color: white;">{{messageSuccess}}</span> </p>
     </div>
     <div class="row">
       <div class="col-lg-2"></div>
