--- a/src/views/layouts/layout.hbs
+++ b/src/views/layouts/layout.hbs
@@ -26,6 +26,7 @@
     <style>
       {{{_sections.style}}}
     </style>
+    <link rel="icon" href="/img/title.jpg" type="image/icon type">
     <title>{{{_sections.title}}}</title>
     
 </head>
